<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.zenoss.zep</groupId>
    <artifactId>zep-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.8.2</version>
    <name>Zenoss Event Processor Parent</name>
    <url>http://www.zenoss.com</url>

    <modules>
        <module>core</module>
        <module>webapp</module>
        <module>dist</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>21</java.version>

        <!-- This database is used for integration tests (dropped/added each time). -->
        <zep.test.jdbc.dbname>zenoss_zep_test</zep.test.jdbc.dbname>
        <zep.test.jdbc.hostname>mysql</zep.test.jdbc.hostname>
        <zep.test.index.dir>${project.build.directory}/index</zep.test.index.dir>
        <zep.test.amqp.uri>amqp://zenoss:zenoss@rabbitmq:5672/zenoss-test</zep.test.amqp.uri>

        <!--
        Changing the Lucene version here could negatively affect customers using 4.x -> 5.x migrations.
        That migration path copies the index from a 4.x system to a 5.x system.
        Please make sure you do NOT make a backwards-incompatible change here without serious consideration.
        -->
        <version.lucene>4.7.2</version.lucene>

        <!--
        Last version compiled for Java 6. Client *is* compatible with later servers.
        -->
        <version.solrj>4.7.2</version.solrj>

        <spring.version>6.1.2</spring.version>
        <jackson.version>2.16.1</jackson.version>
        <jetty.version>11.0.19</jetty.version>

        <metrics.version>4.2.23</metrics.version>
        <jedis.version>3.7.1</jedis.version>
        <mysql.version>5.1.15</mysql.version>
        <mariadb-java-client.version>1.1.7</mariadb-java-client.version>
        <postgresql.version>9.0-801.jdbc4</postgresql.version>
        <cglib-nodep.version>2.2</cglib-nodep.version>
        <jython-standalone.version>2.7.3</jython-standalone.version>
        <java-uuid-generator.version>4.3.0</java-uuid-generator.version>
        <resteasy.version>6.2.6.Final</resteasy.version>
        <resteasy-spring.version>3.1.0.Final</resteasy-spring.version>
        <httpcomponents.version>4.5.13</httpcomponents.version>
        <janino.version>3.1.11</janino.version>
        <jetty-jakarta-servlet-api.version>5.0.2</jetty-jakarta-servlet-api.version>
        <metrics-core.version>4.2.23</metrics-core.version>
        <slf4j.version>2.0.10</slf4j.version>
        <logback.version>1.4.14</logback.version>
        <tomcat-jdbc.version>7.0.27</tomcat-jdbc.version>
        <guava.version>33.0.0-jre</guava.version>
        <easymock.version>5.2.0</easymock.version>
        <junit.version>4.13.2</junit.version>

        <metric-consumer.version>0.1.19</metric-consumer.version>

        <!-- chosen based upon the version used in zing-proto -->
<!--        <protobuf-java.version>2.5.0</protobuf-java.version>-->
        <protobuf-java.version>3.24.2</protobuf-java.version>

        <google-http-client.version>1.19.0</google-http-client.version>
        <gax-grpc.version>2.24.0</gax-grpc.version>
        <pubsub.version>1.115.2</pubsub.version>
        <pubsublite.version>1.12.3</pubsublite.version>
        <zenoss-protocols.version>2.1.9</zenoss-protocols.version>
        <zenoss-utils.version>2.1.1</zenoss-utils.version>
        <zing-proto.version>11.1.2</zing-proto.version>

        <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
        <keytool-maven-plugin.version>1.7</keytool-maven-plugin.version>
        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
        <exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.2.3</maven-failsafe-plugin.version>
        <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
        <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
        <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
    </properties>

    <profiles>
        <!-- Disable the integration tests if we haven't specified a database type -->
        <profile>
            <id>integration-tests</id>
            <activation>
                <property>
                    <name>!dbtype</name>
                </property>
            </activation>
            <properties>
                <skipITs>true</skipITs>
            </properties>
        </profile>
        <profile>
            <id>mysql</id>
            <activation>
                <property>
                    <name>dbtype</name>
                    <value>mysql</value>
                </property>
            </activation>
            <properties>
                <zep.jdbc.protocol>${dbtype}</zep.jdbc.protocol>
                <zep.jdbc.hostname>${zep.test.jdbc.hostname}</zep.jdbc.hostname>
                <zep.jdbc.port>3306</zep.jdbc.port>
                <zep.jdbc.admin.username>root</zep.jdbc.admin.username>
                <zep.jdbc.admin.password>root</zep.jdbc.admin.password>
                <zep.jdbc.username>zenoss</zep.jdbc.username>
                <zep.jdbc.password>zenoss</zep.jdbc.password>
            </properties>
        </profile>
        <profile>
            <id>postgresql</id>
            <activation>
                <property>
                    <name>dbtype</name>
                    <value>postgresql</value>
                </property>
            </activation>
            <properties>
                <zep.jdbc.protocol>${dbtype}</zep.jdbc.protocol>
                <zep.jdbc.hostname>127.0.0.1</zep.jdbc.hostname>
                <zep.jdbc.port>5432</zep.jdbc.port>
                <zep.jdbc.admin.username>postgres</zep.jdbc.admin.username>
                <zep.jdbc.admin.password>postgres</zep.jdbc.admin.password>
                <zep.jdbc.username>zenoss</zep.jdbc.username>
                <zep.jdbc.password>zenoss</zep.jdbc.password>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>${easymock.version}</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>findbugs-maven-plugin</artifactId>
                    <version>${findbugs-maven-plugin.version}</version>
                    <configuration>
                        <xmlOutput>true</xmlOutput>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>${maven-antrun-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                <compilerArgs>
                  <arg>-Xlint:all</arg>
                </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${maven-war-plugin.version}</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <detectJavaApiLink>true</detectJavaApiLink>
                    <excludePackageNames>*.impl.*,*.rest.*</excludePackageNames>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>zenoss-nexus</id>
            <name>Internal Zenoss Nexus</name>
            <url>http://nexus.zenoss.eng:8081/nexus/content/groups/public</url>
            <snapshots>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>zenoss-nexus</id>
            <name>Internal Release Repository</name>
            <url>http://nexus.zenoss.eng:8081/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>zenoss-nexus</id>
            <name>Internal Snapshot Repository</name>
            <url>http://nexus.zenoss.eng:8081/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
